<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        <ImageView
            style="@style/nowPlayingArt"
            android:contentDescription="@string/albumArt"
            android:id="@+id/current_art"
        />
        <TextView
            style="@style/nowPlaying"
            android:text="@string/nowplaying"
        />

        <TextView
            style="@style/nowPlayingSong"
            android:id="@+id/current_song"
         />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
         >
            <ImageView
                style="@style/icons"
                android:contentDescription="@string/icons"
                android:src="@drawable/ic_skip_previous_black_24dp"
            />

            <ImageView
                style="@style/icons"
                android:contentDescription="@string/icons"
                android:src="@drawable/ic_replay_30_black_24dp"
            />

            <ImageView
                style="@style/icons"
                android:contentDescription="@string/icons"
                android:src="@drawable/ic_play_arrow_black_24dp"
            />

            <ImageView
                style="@style/icons"
                android:contentDescription="@string/icons"
                android:src="@drawable/ic_forward_30_black_24dp"
             />

            <ImageView
                style="@style/icons"
                android:contentDescription="@string/icons"
                android:src="@drawable/ic_skip_next_black_24dp"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
